--- a/chats.html
+++ b/chats.html
@@ -37,11 +37,11 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="https://avatars3.githubusercontent.com/u/3612017"
+              src="https://c.tenor.com/c2uPCGF2P6sAAAAC/rowlet-sleeping.gif"
               class="user-component__avatar user-component__avatar"
             />
             <div class="user-component__text">
-              <h4 class="user-component__title">Nicolas</h4>
+              <h4 class="user-component__title">Rowlet</h4>
               <h6 class="user-component__subtitle">
                 Please check My Kokoa Account Info
               </h6>
@@ -86,7 +86,7 @@
     </div>
 
     <script
-      src="https://kit.fontawesome.com/6478f529f2.js"
+      src="https://kit.fontawesome.com/4a55d84999.js"
       crossorigin="anonymous"
     ></script>
   </body>
