--- a/find.html
+++ b/find.html
@@ -62,10 +62,12 @@
         </div>
         <div class="open-post">
           <div class="open-post__column">
-            <h5 class="open-post__title">#BTS</h5>
-            <h6 class="open-post__hashtags">#bts#army#friends</h6>
+            <h5 class="open-post__title">#junho-baek</h5>
+            <h6 class="open-post__hashtags">
+              #junho-baek#real-army(8월 22일 입대)#developer
+            </h6>
             <div class="open-post__members">
-              <img src="https://avatars3.githubusercontent.com/u/3612017" />
+              <img src="junho-baek.PNG" />
               <span class="open-post__member-count">802 members</span>
               <div class="divider"></div>
               <span class="open-post__member-status">Active</span>
@@ -73,7 +75,7 @@
           </div>
           <div class="open-post__column">
             <div class="open-post__photo">
-              <img src="https://avatars3.githubusercontent.com/u/3612017" />
+              <img src="junho-baek.PNG" />
               <div class="open-post__heart-count">
                 <i class="fas fa-heart fa-xs"></i><span>326</span>
               </div>
@@ -114,7 +116,7 @@
     </div>
 
     <script
-      src="https://kit.fontawesome.com/6478f529f2.js"
+      src="https://kit.fontawesome.com/4a55d84999.js"
       crossorigin="anonymous"
     ></script>
   </body>
