--- a/more.html
+++ b/more.html
@@ -37,12 +37,12 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://avatars3.githubusercontent.com/u/3612017"
+            src="junho-baek.PNG"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">Nicolas</h4>
-            <h6 class="user-component__subtitle">+ 787 666 999</h6>
+            <h4 class="user-component__title">Junho-baek</h4>
+            <h6 class="user-component__subtitle">+82 1234 5678</h6>
           </div>
         </div>
         <div class="user-component__column">
@@ -70,18 +70,27 @@
       <div class="more-suggestions">
         <h4 class="more-suggestions__title">Suggestions</h4>
         <div class="more-suggestions__icons">
-          <div class="more-suggestions__icon">
-            <div class="more-suggestions__icon-image">
-              <i class="fas fa-quote-right"></i>
+          <a href="https://github.com/junho-baek">
+            <div class="more-suggestions__icon">
+              <div class="more-suggestions__icon-image">
+                <i class="fa-brands fa-github"></i>
+              </div>
+              <span class="more-suggestions__icon-text"
+                >junho-baek's github!</span
+              >
             </div>
-            <span class="more-suggestions__icon-text">Kokoa Story</span>
-          </div>
-          <div class="more-suggestions__icon">
-            <div class="more-suggestions__icon-image">
-              <i class="fas fa-quote-right"></i>
+          </a>
+
+          <a href="https://www.instagram.com/100juno_o/">
+            <div class="more-suggestions__icon">
+              <div class="more-suggestions__icon-image">
+                <i class="fa-brands fa-instagram"></i>
+              </div>
+              <span class="more-suggestions__icon-text"
+                >junho-baek's Instagram!</span
+              >
             </div>
-            <span class="more-suggestions__icon-text">Kokoa Story</span>
-          </div>
+          </a>
         </div>
       </div>
     </main>
@@ -117,7 +126,7 @@
     </div>
 
     <script
-      src="https://kit.fontawesome.com/6478f529f2.js"
+      src="https://kit.fontawesome.com/4a55d84999.js"
       crossorigin="anonymous"
     ></script>
   </body>
