--- a/chat.html
+++ b/chat.html
@@ -28,7 +28,7 @@
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">니꼬</h1>
+        <h1 class="alt-header__title">Rowlet</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fas fa-search fa-lg"></i></span>
@@ -37,16 +37,14 @@
     </header>
 
     <main class="main-screen main-chat">
-      <div class="chat__timestamp">
-        Tuesday, June 30, 2020
-      </div>
+      <div class="chat__timestamp">Tuesday, June 30, 2020</div>
 
       <div class="message-row">
-        <img src="https://avatars3.githubusercontent.com/u/3612017" />
+        <img src="https://c.tenor.com/DDB5pDtlr5oAAAAC/rowlet-pokemon.gif" />
         <div class="message-row__content">
-          <span class="message__author">Nicolas</span>
+          <span class="message__author">Rowlet</span>
           <div class="message__info">
-            <span class="message__bubble">Hi!</span>
+            <span class="message__bubble">Who woke me up?</span>
             <span class="message__time">21:27</span>
           </div>
         </div>
@@ -55,7 +53,7 @@
       <div class="message-row message-row--own">
         <div class="message-row__content">
           <div class="message__info">
-            <span class="message__bubble">Hi nice to meet you!</span>
+            <span class="message__bubble">I'm Sorry....</span>
             <span class="message__time">21:27</span>
           </div>
         </div>
@@ -80,7 +78,7 @@
     </div>
 
     <script
-      src="https://kit.fontawesome.com/6478f529f2.js"
+      src="https://kit.fontawesome.com/4a55d84999.js"
       crossorigin="anonymous"
     ></script>
   </body>
